...
        <Image
          source={require("../../assets/magnifier.png")}
          style={styles.searchIcon}
          resizeMode="contain"
        />
        <TextInput
          testID="start-input"
          value={startText}
          onChangeText={onStartChange}
          placeholder="Search or click on a building..."
          placeholderTextColor="#EED7DE"
          style={[styles.input, !startText && styles.inputPlaceholder]}
          onFocus={onStartFocus}
...
        <Image
          source={require("../../assets/magnifier.png")}
          style={styles.searchIcon}
          resizeMode="contain"
        />
        <TextInput
          testID="dest-input"
          value={destText}
          onChangeText={onDestChange}
          placeholder="Search or click on a building..."
          placeholderTextColor="#EED7DE"
          style={[styles.input, !destText && styles.inputPlaceholder]}
          onFocus={onDestFocus}
...
